// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqLLg jOdfCt"
>
  <li
    className="sc-fzoxnE fIykNY"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoxnE fIykNY"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoxnE fIykNY"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqLLg jOdfCt"
>
  <li
    className="sc-fzoxnE cQZtGQ"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoxnE cQZtGQ"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoxnE cQZtGQ"
    onClick={[Function]}
  >
    <span
      className="sc-fznLxA jHiQTH"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
